# optimizer

./: .coveragerc  .gitignore  README.md  api.py  bandit.py  choose.py  choosing.py  manage.py  process.py  pyproject.toml  requirements.txt  run.py  simulation.py  split.py  splitvsbandit.py  test_api.py  zappa_settings.json
app/: __init__.py  config.py
app/api/: __init__.py
app/api/v1/: __init__.py  routes.py
app/models/: models.py
app/scripts/: bandit.py  process.py  simulation.py  split.py
app/static/js/: csv.js  form.js
app/templates/: base.html  form.html  form_result.html  update_result.html
migrations/: env.py
migrations/versions/: fbef9d558e1a_.py
static/js/: form.js
templates/: base.html  csv.html  csv_result.html  csv_result_channels.html  form.html  form_result.html  index.html
tests/: tests.py
