[tool.poetry]
name = "ad-optimization"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"
flask-script = "^2.0"
flask-restx = "^0.3"
psycopg2-binary = "^2.8"
zappa = "^0.52"
pandas = "^1.2"
scipy = "^1.5"
matplotlib = "^3.3"
sentry-sdk = {version = "^1.0", extras = ["flask", "sqlalchemy"]}
# facebook_business = "^8.0.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.17"
flake8 = "^3.8"
coverage = "^5.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
