[tool.poetry]
name = "ad-optimization"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9.16"
flask = "^2.2"
flask-sqlalchemy = "^3.0"
flask-migrate = "^4.0"
flask-script = "^2.0"
flask-restx = "^1.0"
psycopg2-binary = "^2.8"
zappa = "^0.58"
pandas = "^1.2"
scipy = "^1.9"
matplotlib = "^3.3"
sentry-sdk = {version = "^1.0", extras = ["flask", "sqlalchemy"]}
# facebook_business = "^8.0.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0"
flake8 = "^6.0"
coverage = "^7.0"
black = "^23.7"
pydocstyle = "^6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
